import "google/protobuf/empty.proto";

syntax = "proto3";

package idea;

service IdeaRead {
  rpc getById(GetIdeaById) returns (Idea);
  rpc getAll(google.protobuf.Empty) returns (Ideas);
}

message GetIdeaById {
  string id = 1;
  optional string userId = 2;
}

message Idea {
  string id = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  repeated string tags = 5;
  string createdAt = 6;
  string publishedAt = 7;
  string deletedAt = 8;
}

message Ideas {
  repeated Idea ideas = 1;
}
